--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,33 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
+img{
+    position: absolute;
+}
+
+.super-mario {
+    width: 200px;
+}
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
+.goomba {
+    top: 400px;
+    left: 60px;
+    width: 100px;
+}
+
+.baloon {
+    z-index: 1;
+    left: 200px;
+    top: 169px;
+}
   
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-    padding: 20px;
-  }
+.speach {
+    position: absolute;
+    z-index: 2;
+    top: 210px;
+    left: 210px;
+    font-size: 22px;
+}
   
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-    margin: 30px;
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: 5px solid black;
-  }
+.bowser {
+    top: 365px;
+    left: 450px;
+    width: 200px;
+}
