--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/style.css
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-3-javascript-eventos/style.css
@@ -25,7 +25,6 @@ button {
 
 #days {
   margin: 0;
-  cursor:pointer;
 }
 
 #days li {
@@ -95,12 +94,12 @@ label {
 }
 
 .my-tasks span {
-  display: block;
   color: #666;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 3px;
   padding-bottom: 10px;
+  vertical-align: middle;
 }
 
 .tasks-container {
